doc/_build/reports/jupyter_execute/content/FromLiterature/notebooks.err.log
Traceback (most recent call last):
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/ben/miniconda3/envs/pyCATHY_doc/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
---
title: Inline Interactivity in Jupyter using MyST
subtitle: Using inline widgets in JupyterLab markdown cells
author:
  - name: Rowan Cockett
    affiliations: Executable Books; Curvenote
    orcid: 0000-0002-7859-8394
    email: rowan@curvenote.com
  - name: Angus Hollands
    affiliations: Executable Books
  - name: Steve Purves
    affiliations: Executable Books; Curvenote
date: 2023/02/20
---

The [JupyterLab MyST extension](https://github.com/executablebooks/jupyterlab-myst) allows you to have MyST renderer in your markdown cells that includes interactivity and inline-evaluation.
------------------

[0;36m  Cell [0;32mIn[1], line 1[0;36m[0m
[0;31m    ---[0m
[0m       ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2192068570.py, line 1)

